[tool.poetry]
name = "valora"
version = "0.1.0"
description = ""
authors = ["Valora <valora@valora.cc>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
blue = "0.5.2"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pyupgrade = "*"
bandit = "*"
pip-audit = "*"

[tool.isort]
profile = "black"
line_length = 79

[tool.blue]
line-length = 79

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
